@@ -3308,15 +3308,16 @@ g_file_mount_mountable (GFile               *file,
 
   iface = G_FILE_GET_IFACE (file);
 
-  if (iface->mount_mountable == NULL) {
-    g_simple_async_report_error_in_idle (G_OBJECT (file),
-				         callback,
-					 user_data,
-					 G_IO_ERROR,
-					 G_IO_ERROR_NOT_SUPPORTED,
-					 _("Operation not supported"));
-    return;
-  }
+  if (iface->mount_mountable == NULL) 
+    {
+      g_simple_async_report_error_in_idle (G_OBJECT (file),
+					   callback,
+					   user_data,
+					   G_IO_ERROR,
+					   G_IO_ERROR_NOT_SUPPORTED,
+					   _("Operation not supported"));
+      return;
+    }
   
   (* iface->mount_mountable) (file,
 			      flags,
@@ -3391,12 +3392,15 @@ g_file_unmount_mountable (GFile               *file,
   iface = G_FILE_GET_IFACE (file);
   
   if (iface->unmount_mountable == NULL)
-    g_simple_async_report_error_in_idle (G_OBJECT (file),
-					 callback,
-					 user_data,
-					 G_IO_ERROR,
-					 G_IO_ERROR_NOT_SUPPORTED,
-					 _("Operation not supported"));
+    {
+      g_simple_async_report_error_in_idle (G_OBJECT (file),
+					   callback,
+					   user_data,
+					   G_IO_ERROR,
+					   G_IO_ERROR_NOT_SUPPORTED,
+					   _("Operation not supported"));
+      return;
+    }
   
   (* iface->unmount_mountable) (file,
 				flags,
@@ -3470,13 +3474,16 @@ g_file_eject_mountable (GFile               *file,
 
   iface = G_FILE_GET_IFACE (file);
   
-  if (iface->eject_mountable == NULL)
-    g_simple_async_report_error_in_idle (G_OBJECT (file),
-					 callback,
-					 user_data,
-					 G_IO_ERROR,
-					 G_IO_ERROR_NOT_SUPPORTED,
-					 _("Operation not supported"));
+  if (iface->eject_mountable == NULL) 
+    {
+      g_simple_async_report_error_in_idle (G_OBJECT (file),
+					   callback,
+					   user_data,
+					   G_IO_ERROR,
+					   G_IO_ERROR_NOT_SUPPORTED,
+					   _("Operation not supported"));
+      return;
+    }
   
   (* iface->eject_mountable) (file,
 			      flags,
