@@ -1,5 +1,11 @@
 2008-02-20  Benjamin Otte  <otte@gnome.org>
 
+	* gfile.c: (g_file_mount_mountable), (g_file_unmount_mountable),
+	(g_file_eject_mountable):
+	even more cases of not returning in error path
+
+2008-02-20  Benjamin Otte  <otte@gnome.org>
+
 	* gfile.c: (g_file_mount_mountable): 
 	return from function in error path.
 
